# spurv

./: .gitmodules  CMakeLists.txt
src/: Args.h  CMakeLists.txt  main.cpp
src/app/: App.cpp  App.h  CMakeLists.txt
src/cmake/: finddeps.cmake  target_link_libraries_system.cmake
src/common/: AppPath.cpp  AppPath.h  CMakeLists.txt  Chrono.h  Color.cpp  Color.h  EnumClassBitmask.h  FS.cpp  FS.h  Formatting.h  FunctionBuilder.h  Geometry.h  Keys.h  Logger.h  Result.h  Thread.cpp  Thread.h  Unicode.h  UnorderedDense.h  VulkanCommon.h
src/config/: config.h.in
src/document/: CMakeLists.txt  Cursor.cpp  Cursor.h  Document.cpp  Document.h  Layout.cpp  Layout.h  Styleable.cpp  Styleable.h  TextClasses.cpp  TextClasses.h
src/document/rope/: node.cpp  node.hpp  rope.cpp  rope.hpp
src/editor/: CMakeLists.txt  Container.cpp  Container.h  Cursor.cpp  Cursor.h  Editor.cpp  Editor.h  Frame.cpp  Frame.h  View.cpp  View.h
src/event/: CMakeLists.txt  EventEmitter.h  EventLoop.cpp  EventLoop.h  EventLoopMain.h  EventLoopUv.cpp  EventLoopUv.h  MainEventLoop.h
src/event/glfw/: EventLoop_glfw.cpp
src/render/: Box.h  CMakeLists.txt  Easing.cpp  Easing.h  GPU.h  GenericPool.cpp  GenericPool.h  GlyphAtlas.cpp  GlyphAtlas.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Renderer.cpp  Renderer.h  SemaphorePool.cpp  SemaphorePool.h  TextLine.h  TextVBO.cpp  TextVBO.h
src/render/shaders/: box-fs.glsl  box-vs.glsl  shaders.cmake  text-fs.glsl  text-vs.glsl
src/script/: Builtins.cpp  Builtins.h  CMakeLists.txt  JSExtra.cpp  JSExtra.h  Promise.cpp  Promise.h  ScriptAtoms.h  ScriptAtomsInternal.h  ScriptBufferSource.h  ScriptClass.cpp  ScriptClass.h  ScriptClassInstance.cpp  ScriptClassInstance.h  ScriptEngine.cpp  ScriptEngine.h  ScriptEngine_fetch.cpp  ScriptEngine_process.cpp  ScriptValue.cpp  ScriptValue.h
src/signal/: CMakeLists.txt  Signal.h
src/text/: CMakeLists.txt  Font.cpp  Font.h  TextLine.h  TextProperty.h  TextStyle.h
src/thread/: AsyncContainer.h  CMakeLists.txt  ThreadPool.cpp  ThreadPool.h
src/typescript/: .eslintrc  CMakeLists.txt  build.js  package-lock.json  package.json  rollup.config.js  tsconfig.json  tsconfig.tsbuildinfo
src/typescript/src/: EventEmitter.ts  Process.ts  ProcessData.ts  ProcessFinishedEvent.ts  ProcessOptions.ts  ProcessResult.ts  ProcessStderrEvent.ts  ProcessStdoutEvent.ts  assert.ts  concatArrayBuffers.ts  console.ts  format.ts  formatArrayBuffer.ts  formatArrayBufferView.ts  formatError.ts  global.d.ts  index.ts  installConsole.ts  log.ts  splitCommand.ts  spurv.d.ts  spurv.ts  test.ts  types.d.ts
src/typescript/typings/: spurv.d.ts
src/window/: CMakeLists.txt  Window.cpp  Window.h
src/window/glfw/: GlfwUserData.h  Window_glfw.cpp
